[package]
name = "mayara"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.1"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
axum = { version = "0.7.5", features = ["http2", "macros", "ws"] }
bincode = "1.3.3"
clap = { version = "4.5.15", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
crossbeam = "0.8.4"
enum-primitive-derive = "0.3.0"
env_logger = "0.11.5"
libc = "0.2.156"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
network-interface = "2.0.0"
num-traits = "0.2.19"
serde = { version = "1.0.206", features = ["derive", "serde_derive"] }
serde_json = "1.0.125"
socket2 = "0.5.7"
terminal_size = "0.3.0"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tokio-graceful-shutdown = "0.15.1"
tokio-shutdown = "0.1.4"
tokio-tungstenite = "0.23.1"

