[package]
name = "mayara"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.1"

[features]
navico = []
furuno = []
raymarine = []
default = ["navico", "furuno", "raymarine"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
atomic_float = "1.1.0"
axum = { version = "0.8.1", features = ["http2", "json", "macros", "tokio", "tower-log", "tracing", "ws"] }
axum-embed = "0.1.0"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
core-foundation = "0.10.0"
crossbeam = "0.8.4"
directories = "5.0.1"
enum-primitive-derive = "0.3.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
headers = "0.4.0"
hyper = "1.5.2"
libc = "0.2.156"
log = "0.4.22"
mdns-sd = "0.11.4"
miette = { version = "7.2.0", features = ["fancy"] }
network-interface = "2.0.0"
nix = { version = "0.29.0", features = ["net", "socket"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
protobuf = "3.5.1"
rust-embed = { version = "8.5.0", features = ["axum","interpolate-folder-path"] }
serde = { version = "1.0.206", features = ["derive", "serde_derive"] }
serde_json = "1.0.125"
serde_repr = "0.1.19"
serde_with = { version = "3.9.0", features = ["macros"] }
socket2 = "0.5.7"
system-configuration = "0.6.1"
terminal_size = "0.3.0"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tokio-graceful-shutdown = "0.15.1"
tokio-shutdown = "0.1.4"

[build-dependencies]
protobuf-codegen = "3.5.1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "blocking"] }
rust-embed = { version = "8.5.0", features = ["axum","interpolate-folder-path"] }
